--- a/Components/Pages/Catalogos/Usuarios.razor
+++ b/Components/Pages/Catalogos/Usuarios.razor
@@ -2,6 +2,7 @@
 @inject HttpClient Http
 @inject SweetAlertService Swal
 @using SistemaAduanero.Shared.DTOs
+@attribute [Authorize(Roles = "Admin")]
 
 <div class="container-fluid mt-4">
     <div class="card shadow-sm border-0">
