--- a/Components/Pages/ConvertidorVucem.razor
+++ b/Components/Pages/ConvertidorVucem.razor
@@ -3,7 +3,7 @@
 @inject IJSRuntime JS
 @inject SweetAlertService Swal
 @using System.Net.Http.Headers
-
+@attribute [Authorize]
 <div class="container mt-4">
     <div class="card shadow-sm border-0">
         <div class="card-header bg-dark text-white py-3">
