--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using SistemaAduanero.Web.Components
 @using Microsoft.AspNetCore.Components.Authorization
 @using CurrieTechnologies.Razor.SweetAlert2
+@using Microsoft.AspNetCore.Authorization
